[tool.poetry]
name = "akande"
version = "0.0.2"
description = "An innovative, open-source voice assistant powered by OpenAI's GPT-3, designed to provide interactive, conversational experiences through both voice and text inputs."
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
license = "Apache Software License"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/akande"
homepage = "https://akande.co"

[tool.poetry.dependencies]
openai = "1.12.0"
python = "^3.9"
python-dotenv = "1.0.1"
pyttsx4 = "3.0.15"
reportlab = "4.1.0"
speechrecognition = "3.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 72
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 72
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
known_first_party = "akande"

[tool.pytest]
addopts = "--cov=akande --cov-report=term-missing --cov-report=xml --cov-report=html --cov-fail-under=100"
testpaths = "tests"
