[metadata]
name = akande
version = 0.0.1
author = Sebastian Rousseau
author_email = sebastian.rousseau@gmail.com
description = Akande: An OpenAI GPT-3 powered voice assistant.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourgithub/akande
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires = annotated-types==0.6.0 ; python_version >= "3.9" and python_version < "4.0"
    anyio==4.2.0 ; python_version >= "3.9" and python_version < "4.0"
    certifi==2024.2.2 ; python_version >= "3.9" and python_version < "4.0"
    chardet==5.2.0 ; python_version >= "3.9" and python_version < "4"
    charset-normalizer==3.3.2 ; python_version >= "3.9" and python_version < "4.0"
    click==8.1.7 ; python_version >= "3.9" and python_version < "4.0"
    colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows"
    distro==1.9.0 ; python_version >= "3.9" and python_version < "4.0"
    exceptiongroup==1.2.0 ; python_version >= "3.9" and python_version < "3.11"
    gtts==2.5.1 ; python_version >= "3.9" and python_version < "4.0"
    h11==0.14.0 ; python_version >= "3.9" and python_version < "4.0"
    httpcore==1.0.2 ; python_version >= "3.9" and python_version < "4.0"
    httpx==0.26.0 ; python_version >= "3.9" and python_version < "4.0"
    idna==3.6 ; python_version >= "3.9" and python_version < "4.0"
    numpy==1.26.4 ; python_version >= "3.9" and python_version < "4.0"
    openai==1.12.0 ; python_version >= "3.9" and python_version < "4.0"
    pillow==10.2.0 ; python_version >= "3.9" and python_version < "4"
    pyaudio==0.2.14 ; python_version >= "3.9" and python_version < "4.0"
    pydantic-core==2.16.2 ; python_version >= "3.9" and python_version < "4.0"
    pydantic==2.6.1 ; python_version >= "3.9" and python_version < "4.0"
    pydub==0.25.1 ; python_version >= "3.9" and python_version < "4.0"
    python-dotenv==1.0.1 ; python_version >= "3.9" and python_version < "4.0"
    reportlab==4.1.0 ; python_version >= "3.9" and python_version < "4"
    requests==2.31.0 ; python_version >= "3.9" and python_version < "4.0"
    sniffio==1.3.0 ; python_version >= "3.9" and python_version < "4.0"
    speechrecognition==3.10.1 ; python_version >= "3.9" and python_version < "4.0"
    tqdm==4.66.1 ; python_version >= "3.9" and python_version < "4.0"
    typing-extensions==4.9.0 ; python_version >= "3.9" and python_version < "4.0"
    urllib3==2.2.0 ; python_version >= "3.9" and python_version < "4.0"

[options.entry_points]
console_scripts =
	akande = akande:main

[aliases]
test = pytest

[tool:pytest]
testpaths = tests

[wheel]
universal = 1

