[metadata]
name = akande
version = 0.0.3
author = Sebastian Rousseau
author_email = sebastian.rousseau@gmail.com
description = Akande: An OpenAI GPT-3 powered voice assistant.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourgithub/akande
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires = annotated-types==0.6.0 ; python_version >= "3.9" and python_version < "4.0"
	anyio==4.2.0 ; python_version >= "3.9" and python_version < "4.0"
	certifi==2024.2.2 ; python_version >= "3.9" and python_version < "4.0"
	chardet==5.2.0 ; python_version >= "3.9" and python_version < "4"
	charset-normalizer==3.3.2 ; python_version >= "3.9" and python_version < "4.0"
	colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows"
	comtypes==1.3.0 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows"
	distro==1.9.0 ; python_version >= "3.9" and python_version < "4.0"
	exceptiongroup==1.2.0 ; python_version >= "3.9" and python_version < "3.11"
	h11==0.14.0 ; python_version >= "3.9" and python_version < "4.0"
	httpcore==1.0.3 ; python_version >= "3.9" and python_version < "4.0"
	httpx==0.26.0 ; python_version >= "3.9" and python_version < "4.0"
	idna==3.6 ; python_version >= "3.9" and python_version < "4.0"
	openai==1.12.0 ; python_version >= "3.9" and python_version < "4.0"
	pillow==10.2.0 ; python_version >= "3.9" and python_version < "4"
	py3-tts==3.5 ; python_version >= "3.9" and python_version < "4.0"
	pyaudio==0.2.14 ; python_version >= "3.9" and python_version < "4.0"
	pydantic-core==2.16.2 ; python_version >= "3.9" and python_version < "4.0"
	pydantic==2.6.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-core==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-accessibility==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "20.0"
	pyobjc-framework-accounts==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "12.0"
	pyobjc-framework-addressbook==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-adservices==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "20.0"
	pyobjc-framework-adsupport==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "18.0"
	pyobjc-framework-applescriptkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-applescriptobjc==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "10.0"
	pyobjc-framework-applicationservices==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-apptrackingtransparency==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "20.0"
	pyobjc-framework-audiovideobridging==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "12.0"
	pyobjc-framework-authenticationservices==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "19.0"
	pyobjc-framework-automaticassessmentconfiguration==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "19.0"
	pyobjc-framework-automator==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-avfoundation==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "11.0"
	pyobjc-framework-avkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "13.0"
	pyobjc-framework-avrouting==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "22.0"
	pyobjc-framework-backgroundassets==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "22.0"
	pyobjc-framework-businesschat==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "18.0"
	pyobjc-framework-calendarstore==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "9.0"
	pyobjc-framework-callkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "20.0"
	pyobjc-framework-cfnetwork==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-classkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "20.0"
	pyobjc-framework-cloudkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "14.0"
	pyobjc-framework-cocoa==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-collaboration==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "9.0"
	pyobjc-framework-colorsync==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "17.0"
	pyobjc-framework-contacts==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "15.0"
	pyobjc-framework-contactsui==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "15.0"
	pyobjc-framework-coreaudio==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-coreaudiokit==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-corebluetooth==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "14.0"
	pyobjc-framework-coredata==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-corehaptics==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "19.0"
	pyobjc-framework-corelocation==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "10.0"
	pyobjc-framework-coremedia==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "11.0"
	pyobjc-framework-coremediaio==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "11.0"
	pyobjc-framework-coremidi==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-coreml==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "17.0"
	pyobjc-framework-coremotion==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "19.0"
	pyobjc-framework-coreservices==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-corespotlight==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "17.0"
	pyobjc-framework-coretext==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-corewlan==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "10.0"
	pyobjc-framework-cryptotokenkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "14.0"
	pyobjc-framework-datadetection==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "21.0"
	pyobjc-framework-devicecheck==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "19.0"
	pyobjc-framework-dictionaryservices==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "9.0"
	pyobjc-framework-discrecording==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-discrecordingui==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-diskarbitration==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-dvdplayback==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-eventkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "12.0"
	pyobjc-framework-exceptionhandling==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-executionpolicy==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "19.0"
	pyobjc-framework-extensionkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "22.0"
	pyobjc-framework-externalaccessory==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "17.0"
	pyobjc-framework-fileprovider==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "19.0"
	pyobjc-framework-fileproviderui==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "19.0"
	pyobjc-framework-findersync==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "14.0"
	pyobjc-framework-fsevents==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-gamecenter==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "12.0"
	pyobjc-framework-gamecontroller==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "13.0"
	pyobjc-framework-gamekit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "12.0"
	pyobjc-framework-gameplaykit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "15.0"
	pyobjc-framework-healthkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "22.0"
	pyobjc-framework-imagecapturecore==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "10.0"
	pyobjc-framework-imserviceplugin==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "11.0"
	pyobjc-framework-inputmethodkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "9.0"
	pyobjc-framework-installerplugins==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-instantmessage==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "9.0"
	pyobjc-framework-intents==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "16.0"
	pyobjc-framework-intentsui==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "21.0"
	pyobjc-framework-iosurface==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "10.0"
	pyobjc-framework-ituneslibrary==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "10.0"
	pyobjc-framework-kernelmanagement==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "20.0"
	pyobjc-framework-latentsemanticmapping==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-launchservices==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-libdispatch==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "12.0"
	pyobjc-framework-linkpresentation==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "19.0"
	pyobjc-framework-localauthentication==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "14.0"
	pyobjc-framework-localauthenticationembeddedui==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "21.0"
	pyobjc-framework-mailkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "21.0"
	pyobjc-framework-mapkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "13.0"
	pyobjc-framework-mediaaccessibility==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "13.0"
	pyobjc-framework-medialibrary==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "13.0"
	pyobjc-framework-mediaplayer==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "16.0"
	pyobjc-framework-mediatoolbox==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "13.0"
	pyobjc-framework-metal==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "15.0"
	pyobjc-framework-metalfx==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "22.0"
	pyobjc-framework-metalkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "15.0"
	pyobjc-framework-metalperformanceshaders==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "17.0"
	pyobjc-framework-metalperformanceshadersgraph==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "20.0"
	pyobjc-framework-metrickit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "21.0"
	pyobjc-framework-mlcompute==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "20.0"
	pyobjc-framework-modelio==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "15.0"
	pyobjc-framework-multipeerconnectivity==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "14.0"
	pyobjc-framework-naturallanguage==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "18.0"
	pyobjc-framework-netfs==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "10.0"
	pyobjc-framework-network==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "18.0"
	pyobjc-framework-networkextension==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "15.0"
	pyobjc-framework-notificationcenter==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "14.0"
	pyobjc-framework-opendirectory==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "10.0"
	pyobjc-framework-osakit==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-oslog==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "19.0"
	pyobjc-framework-passkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "20.0"
	pyobjc-framework-pencilkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "19.0"
	pyobjc-framework-photos==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "15.0"
	pyobjc-framework-photosui==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "15.0"
	pyobjc-framework-preferencepanes==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-pubsub==9.0.1 ; platform_release >= "9.0" and platform_release < "18.0" and python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-pushkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "19.0"
	pyobjc-framework-quartz==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-quicklookthumbnailing==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "19.0"
	pyobjc-framework-replaykit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "20.0"
	pyobjc-framework-safariservices==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "15.0"
	pyobjc-framework-safetykit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "22.0"
	pyobjc-framework-scenekit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "11.0"
	pyobjc-framework-screencapturekit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "21.4"
	pyobjc-framework-screensaver==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-screentime==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "20.0"
	pyobjc-framework-scriptingbridge==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "9.0"
	pyobjc-framework-searchkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-security==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-securityfoundation==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-securityinterface==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-servicemanagement==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "10.0"
	pyobjc-framework-sharedwithyou==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "22.0"
	pyobjc-framework-sharedwithyoucore==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "22.0"
	pyobjc-framework-shazamkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "21.0"
	pyobjc-framework-social==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "12.0"
	pyobjc-framework-soundanalysis==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "19.0"
	pyobjc-framework-speech==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "19.0"
	pyobjc-framework-spritekit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "13.0"
	pyobjc-framework-storekit==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "11.0"
	pyobjc-framework-syncservices==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-systemconfiguration==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc-framework-systemextensions==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "19.0"
	pyobjc-framework-threadnetwork==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "22.0"
	pyobjc-framework-uniformtypeidentifiers==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "20.0"
	pyobjc-framework-usernotifications==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "18.0"
	pyobjc-framework-usernotificationsui==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "20.0"
	pyobjc-framework-videosubscriberaccount==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "18.0"
	pyobjc-framework-videotoolbox==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "12.0"
	pyobjc-framework-virtualization==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "20.0"
	pyobjc-framework-vision==9.0.1 ; python_version >= "3.9" and python_version < "4.0" and platform_release >= "17.0"
	pyobjc-framework-webkit==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyobjc==9.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pypiwin32==223 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows"
	python-dotenv==1.0.1 ; python_version >= "3.9" and python_version < "4.0"
	pyttsx4==3.0.15 ; python_version >= "3.9" and python_version < "4.0"
	pywin32==306 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows"
	reportlab==4.1.0 ; python_version >= "3.9" and python_version < "4"
	requests==2.31.0 ; python_version >= "3.9" and python_version < "4.0"
	six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
	sniffio==1.3.0 ; python_version >= "3.9" and python_version < "4.0"
	speechrecognition==3.10.1 ; python_version >= "3.9" and python_version < "4.0"
	tqdm==4.66.2 ; python_version >= "3.9" and python_version < "4.0"
	typing-extensions==4.9.0 ; python_version >= "3.9" and python_version < "4.0"
	urllib3==2.2.0 ; python_version >= "3.9" and python_version < "4.0"

[options.entry_points]
console_scripts = 
	akande = akande:main

[aliases]
test = pytest

[tool:pytest]
testpaths = tests

[wheel]
universal = 1

